set version to 1.2-1

--- a/Molar/Package/DEBIAN/control
+++ b/Molar/Package/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: de.hoenig.molar
 Name: Molar
-Version: 1.2
+Version: 1.2-1
 Description: 
 Section: Tweaks
 Depends: firmware (>= 7.0), mobilesubstrate, libactivator, applist
